# md2slides

./: .gitignore  AGENTS.md  INSTRUCTIONS.md  README.md  example.md  pyproject.toml
src/md2slides/: __init__.py  cli.py  converter.py  parser.py
tests/: __init__.py  test_cli.py  test_converter.py  test_parser.py
